--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ article p {
   width: 150px;
   height: 150px;
   
-  background-image: url('../images/marvelSprites.jpg');
+  background-image: url('../images/worldcupsprite.jpg');
 }
 
 #carol { background-position: -150px 0; }
