Added Banner animation and changed colours

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ header {
 .characters { list-style-type: none; }
 
 .characters li { 
+  position: relative;
   display: inline-block;
   height: 220px;
   margin: 10px 8px;
@@ -49,16 +50,47 @@ header {
 }
 
 .characters li h5 {
+  position: relative;
   color: white;
   padding: 12px 8px;
 }
 
 .characters li a { text-decoration: none; }
 
+.blue_bumper {
+  width: 100%;
+  height: 6px;
+  background-color: rgb(60, 60, 235);
+
+  transition: height 0.2s ease;
+  position: absolute;
+}
+
+.green_bumper {
+  width: 100%;
+  height: 6px;
+  background-color: green;
+
+  transition: height 0.2s ease;
+  position: absolute;
+}
+
 .red_bumper {
   width: 100%;
   height: 6px;
   background-color: red;
+
+  transition: height 0.2s ease;
+  position: absolute;
+}
+
+.yellow_bumper {
+  width: 100%;
+  height: 6px;
+  background-color: rgb(180, 180, 5);
+
+  transition: height 0.2s ease;
+  position: absolute;
 }
 
 article { 
@@ -86,11 +118,25 @@ article p {
   background-image: url('../images/worldcupsprite.jpg');
 }
 
-#carol { background-position: -150px 0; }
-#clint { background-position: -300px 0; }
-#hulk { background-position: -450px 0; }
-#thor { background-position: -600px 0; }
-#widow { background-position: -750px 0; }
+#iran { background-position: -150px 0; }
+#portugal { background-position: -300px 0; }
+#spain { background-position: -450px 0; }
+
+.characters li:hover .blue_bumper {
+  height: 70px;
+}
+
+.characters li:hover .green_bumper {
+  height: 70px;
+}
+
+.characters li:hover .red_bumper {
+  height: 70px;
+}
+
+.characters li:hover .yellow_bumper {
+  height: 70px;
+}
 
 .sprite:hover { background-position-y: -150px !important; }
 
