--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,6 @@ header {
   margin: 10px 8px;
 
   background-color: black;
-
   text-align: left;
 
   cursor: pointer;
@@ -56,6 +55,19 @@ header {
 }
 
 .characters li a { text-decoration: none; }
+
+input[type="checkbox"] { 
+  margin-left: 5px; 
+  margin-right: 25px; 
+}
+
+input[type="checkbox"]:checked + span::after {
+  content: "Voted!";
+  font-size: 14px;
+  text-align: center;
+
+  animation: fadeIn 0.5s;
+}
 
 .blue_bumper {
   width: 100%;
@@ -123,19 +135,19 @@ article p {
 #spain { background-position: -450px 0; }
 
 .characters li:hover .blue_bumper {
-  height: 70px;
+  height: 52px;
 }
 
 .characters li:hover .green_bumper {
-  height: 70px;
+  height: 52px;
 }
 
 .characters li:hover .red_bumper {
-  height: 70px;
+  height: 52px;
 }
 
 .characters li:hover .yellow_bumper {
-  height: 70px;
+  height: 52px;
 }
 
 .sprite:hover { background-position-y: -150px !important; }
@@ -210,3 +222,8 @@ footer {
 
 /* turn the lightbox on using the :target pseudo selector */
 .lightbox:target { display: block; }
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
